# xatslsp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  WORKLOG.txt
HX/: Makefile_update
HX/srcgen/: Makefile  Makefile_update
HX/srcgen/TEST/: Makefile
src/: CMakeLists.txt  file_system.c  file_system.h  json_rpc.c  json_rpc.h  language_server.c  language_server.h  strslice.h  text_buffer.c  text_buffer.h  xatslsp_main.c
tests/: CMakeLists.txt  file_system_tests.c  json_rpc_tests  json_rpc_tests.c  strslice_tests.c  text_buffer_tests.c  text_buffer_tests.txt  text_buffer_tests.txt.ok
